--- a/exercicios/ex006/ex001.html
+++ b/exercicios/ex006/ex001.html
@@ -9,13 +9,18 @@
 </head>
 <body>
     <header>
-          <h1>Analizador</h1>
+          <h1>Analizador de Números</h1>
     </header>
     <section>
         <div>
-
+            <p>
+                 Número (entre 1 e 100): <input type="number" name="fnum" id="fnum">
+                 <input type="button" value="Adicionar" onclick="adicionar()"> <br> <br>
+                 <select name="flista" id="flista" size="6"></select> <br>
+                 <input type="button" value="Finalizar">
+            </p>
         </div>
-        <div>
+        <div id="res">
 
         </div>
     </section>
