--- a/exercicios/ex006/ex001.html
+++ b/exercicios/ex006/ex001.html
@@ -17,7 +17,7 @@
                  Número (entre 1 e 100): <input type="number" name="fnum" id="fnum">
                  <input type="button" value="Adicionar" onclick="adicionar()"> <br> <br>
                  <select name="flista" id="flista" size="6"></select> <br>
-                 <input type="button" value="Finalizar">
+                 <input type="button" value="Finalizar" onclick="finalizar()">
             </p>
         </div>
         <div id="res">
